tests/ui/non-string.stderr
error: proc-macro derive panicked
  --> $DIR/non-string.rs:13:5
   |
13 |     indoc!(64);
   |     ^^^^^^^^^^^
   |
   = help: message: argument must be a single string literal
   = note: this error originates in a macro outside of the current crate

